# findoc-rag

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  findoc_rag_progress.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/api/: app.py  routes.py  schemas.py
src/llm/: client.py
src/models/: audit_report.py  financial_document.py  invoice.py
src/processors/: __init__.py  document_processor.py  excel_parser.py  pdf_parser.py
src/rag/: embedder.py  pipeline.py  vector_store.py
tests/: test_api.py  test_models.py  test_rag.py
