[project]
name = "findoc-rag"
version = "1.0.0"
description = "Maliyye senedleri uzerinde RAG-based sual-cavab sistemi"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long (docstring-lerde ola biler)
    "F401",  # imported but unused (__init__.py-lerde)
]
exclude = [".venv", "__pycache__", ".git"]
